Make training work, add tests, split up commands
* make training work
* fixed issues with batches and patches, in naming and in implementation
* split up commands into train, predict and train+predict
* add some tests
* remove some unused code